plugins {
    id 'java'
    id 'application'
}

version = '1.0-SNAPSHOT'
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(23)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.apache.commons:commons-lang3:3.14.0' // For Pair class
    implementation 'com.google.code.gson:gson:2.10.1'
}

dependencyLocking {
    lockAllConfigurations()
}

test {
    useJUnitPlatform()
}

application {
    mainClass = 'Main'
}

run {
    standardInput = System.in
}